--- a/NotificationExperiments/Base.lproj/Main.storyboard
+++ b/NotificationExperiments/Base.lproj/Main.storyboard
@@ -63,55 +63,73 @@
                                     <segue destination="fw6-h4-8iT" kind="embed" id="gtS-GN-ihG"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGY-JR-IPP">
-                                <rect key="frame" x="20" y="161" width="129" height="30"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9R-xv-xXk">
+                                <rect key="frame" x="46" y="124" width="426" height="404"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGY-JR-IPP">
+                                        <rect key="frame" x="8" y="8" width="187" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="187" id="R1Z-kM-arZ"/>
+                                            <constraint firstAttribute="height" constant="30" id="n0z-h6-aZy"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Post fireAndForget"/>
+                                        <connections>
+                                            <action selector="buttonFireAndForget:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ArF-ju-ooE"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PhD-Y1-J0M">
+                                        <rect key="frame" x="8" y="273" width="202" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="202" id="TRw-FN-5OK"/>
+                                            <constraint firstAttribute="height" constant="30" id="TtB-mc-wNd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Post fireAndPersist"/>
+                                        <connections>
+                                            <action selector="buttonFireAndPersist:" destination="BYZ-38-t0r" eventType="touchUpInside" id="scB-rm-nqI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vD-BF-3fa">
+                                        <rect key="frame" x="8" y="142" width="382" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Ic5-TJ-vYX"/>
+                                            <constraint firstAttribute="width" constant="382" id="osX-RG-K5W"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Post fireAndRememberOnceIfNotIntercepted"/>
+                                        <connections>
+                                            <action selector="buttonFireAndRememberOnce:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SWK-V5-nxm"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="129" id="R1Z-kM-arZ"/>
-                                    <constraint firstAttribute="height" constant="30" id="n0z-h6-aZy"/>
+                                    <constraint firstItem="8vD-BF-3fa" firstAttribute="top" secondItem="I9R-xv-xXk" secondAttribute="top" constant="142" id="8Tr-Cu-ywC"/>
+                                    <constraint firstItem="PGY-JR-IPP" firstAttribute="leading" secondItem="PhD-Y1-J0M" secondAttribute="leading" id="ELm-Hv-AXh"/>
+                                    <constraint firstAttribute="bottom" secondItem="PhD-Y1-J0M" secondAttribute="bottom" constant="101" id="HRz-Z3-w9d"/>
+                                    <constraint firstItem="PGY-JR-IPP" firstAttribute="top" secondItem="I9R-xv-xXk" secondAttribute="topMargin" id="Vjl-VO-4AN"/>
+                                    <constraint firstAttribute="width" constant="426" id="WvJ-dY-PrB"/>
+                                    <constraint firstAttribute="height" constant="404" id="Xbe-No-dqm"/>
+                                    <constraint firstItem="PGY-JR-IPP" firstAttribute="leading" secondItem="8vD-BF-3fa" secondAttribute="leading" id="qNz-Am-rB2"/>
+                                    <constraint firstItem="PGY-JR-IPP" firstAttribute="leading" secondItem="I9R-xv-xXk" secondAttribute="leadingMargin" id="tn0-5V-CdV"/>
                                 </constraints>
-                                <state key="normal" title="Post fireAndForget"/>
-                                <connections>
-                                    <action selector="buttonFireAndForget:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ArF-ju-ooE"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vD-BF-3fa">
-                                <rect key="frame" x="17" y="218" width="308" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Ic5-TJ-vYX"/>
-                                    <constraint firstAttribute="width" constant="308" id="osX-RG-K5W"/>
-                                </constraints>
-                                <state key="normal" title="Post fireAndRememberOnceIfNotIntercepted"/>
-                                <connections>
-                                    <action selector="buttonFireAndRememberOnce:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SWK-V5-nxm"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PhD-Y1-J0M">
-                                <rect key="frame" x="29" y="273" width="131" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="131" id="TRw-FN-5OK"/>
-                                    <constraint firstAttribute="height" constant="30" id="TtB-mc-wNd"/>
-                                </constraints>
-                                <state key="normal" title="Post fireAndPersist"/>
-                                <connections>
-                                    <action selector="buttonFireAndPersist:" destination="BYZ-38-t0r" eventType="touchUpInside" id="scB-rm-nqI"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="PGY-JR-IPP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="141" id="4h6-X6-O9L"/>
                             <constraint firstAttribute="trailingMargin" secondItem="leZ-5L-fbS" secondAttribute="trailing" constant="-1" id="7OX-XD-Y9c"/>
+                            <constraint firstItem="I9R-xv-xXk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="26" id="H5P-gi-PBk"/>
                             <constraint firstItem="M7r-IL-lPb" firstAttribute="top" secondItem="4Y5-UJ-MeB" secondAttribute="bottom" constant="24" id="Itt-q7-Lme"/>
                             <constraint firstItem="4Y5-UJ-MeB" firstAttribute="top" secondItem="tq7-Am-9j9" secondAttribute="bottom" constant="22" id="MkQ-uS-LZe"/>
-                            <constraint firstItem="PhD-Y1-J0M" firstAttribute="top" secondItem="8vD-BF-3fa" secondAttribute="bottom" constant="25" id="OmO-0f-cgw"/>
-                            <constraint firstItem="PGY-JR-IPP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="WFa-nW-Rxq"/>
-                            <constraint firstItem="PhD-Y1-J0M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="9" id="f5U-qq-gBt"/>
+                            <constraint firstItem="I9R-xv-xXk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="104" id="UpI-T1-qR8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4Y5-UJ-MeB" secondAttribute="trailing" constant="-1" id="mL9-vA-2qE"/>
                             <constraint firstItem="leZ-5L-fbS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="miS-mU-iG2"/>
-                            <constraint firstItem="8vD-BF-3fa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="17" id="qHi-SU-jX9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tq7-Am-9j9" secondAttribute="trailing" constant="-1" id="qNq-tQ-tyT"/>
                             <constraint firstItem="tq7-Am-9j9" firstAttribute="top" secondItem="leZ-5L-fbS" secondAttribute="bottom" constant="19" id="rEt-Yd-RxW"/>
-                            <constraint firstItem="8vD-BF-3fa" firstAttribute="top" secondItem="PGY-JR-IPP" secondAttribute="bottom" constant="27" id="uMd-Wx-HaD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="M7r-IL-lPb" secondAttribute="trailing" constant="-1" id="v7a-Jq-8EI"/>
                         </constraints>
                     </view>
@@ -120,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-642" y="638"/>
+            <point key="canvasLocation" x="-643.20000000000005" y="637.78110944527737"/>
         </scene>
         <!--View Controller1-->
         <scene sceneID="sye-RN-xeq">
